--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                       <p class="text-center mb-3  text-size-adjust" style="color: #FFFFFF;">Renova Campus Suite offers comprehensive tools for managing student admissions and registrations, facilitating a seamless enrollment process from application to acceptance. Additionally, the software provides robust reporting capabilities, allowing administrators to generate detailed fees due reports categorized by classes, students, and fee types. With Renova Campus Suite, educational institutions can efficiently track financial transactions, monitor student accounts, and ensure timely fee collections.</p>
                     </div>
                   </div>
-                    <div class="btn-viewmore d-flex justify-content-center align-items-end">
+                    <div class="btn-viewmore d-flex justify-content-center align-items-end" id="btn_campus">
                       <button class="flip-box-button btn  px-4" style="background-color: #FFFFFF; color: #3498db;">View More</button>
                     </div>
                 </div>
@@ -236,7 +236,7 @@
                       <p class="text-center mb-3  text-size-adjust" style="color: #FFFFFF;">Empower your business with our Cloud ERP system. Seamlessly integrating operations, our scalable solution offers real-time insights and access from anywhere. From inventory to accounting, HR, CRM, and more, streamline processes with comprehensive modules. Secure access and real-time analytics provide clear performance insights, enabling informed decisions on the go. Say goodbye to costly upgrades - our fully managed system ensures hassle-free operation, allowing you to focus on growth.</p>
                     </div>
                   </div>
-                    <div class="btn-viewmore d-flex justify-content-center align-items-end">
+                    <div class="btn-viewmore d-flex justify-content-center align-items-end" id="btn_erp">
                       <button class="flip-box-button btn  px-4" style="background-color: #FFFFFF; color: #f39c12;">View More</button>
                     </div>
                 </div>
