--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <ul class="ml-auto pr-3">
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li><a class="nav-link scrollto" href="#services">Services</a></li>
+          <li><a class="nav-link scrollto" href="#services">Product</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle ml-auto pr-1" style="color: blueviolet;"></i>
@@ -134,7 +134,7 @@
       <div class="container" data-aos="fade-up">
 
       <div class="section-title">
-         <h2>Services</h2>
+         <h2>Products</h2>
          <p>Transform your accounting processes with our innovative software solutions. Whether you're a small business or a large enterprise, we offer customizable features to streamline your financial management. From automated invoicing to advanced reporting, our platform provides the tools you need to optimize efficiency and drive success.</p>
       </div>
 
@@ -855,7 +855,9 @@
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#hero">Home</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#about">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#services">Services</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#services">Our Services</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="index.html#contact">Contact Us</a></li>
+
               <!--<li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li> 
               <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>-->
             </ul>
@@ -901,10 +903,10 @@
         </div>
         <div class="social-links text-center text-md-right pt-3 pt-md-0">
           <a href="https://wa.me/+919020555620" class="whatsapp"><i class="bi bi-whatsapp"></i></a>
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://www.facebook.com/profile.php?id=61556617793697" class="facebook"><i class="bx bxl-facebook"></i></a>
+          <a href="https://www.instagram.com/renovainnovation/" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.linkedin.com/company/renovainnovation/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
