--- a/product_Detail.html
+++ b/product_Detail.html
@@ -54,7 +54,7 @@
     <div class="col-md-6 product order-md-1">
         <img src="ERP_PictureDetail.webp" alt="" class="center img-fluid">
     </div>
-    <div class="col-md-6 order-md-2" style="background-color: rgb(246, 233, 233);">
+    <div class="col-md-6 order-md-2" style="background-color: rgb(236, 234, 234);">
       <h2>Renova ERP</h2>
       <p>Renova ERP offers a comprehensive suite of tools to streamline business operations and enhance financial management. With features like multiple branch management, stock transfers, manufacturing support, costing insights, and specialized service modules, Renova ERP caters to diverse industry needs. It simplifies procurement with centralized purchase management and ensures data security with customizable user permissions and cloud backup. Renova ERP empowers businesses of all sizes to achieve greater efficiency, transparency, and growth.</p>
       <button onclick="downloadFile('http://renovadownload.renovaerp.in//Renova.rar')" class="download-btn" id="btn-erp">Download</button>
@@ -90,7 +90,7 @@
     </div>
   </div>
 </section>
-<section class="section-Campus pb-4">
+<section class="section-medi pb-4">
   <div class="row medi">
     <div class="col-md-6 order-md-1" style="background-color: rgb(232, 232, 232);">
         <h2>Renova MediCare</h2>
@@ -103,7 +103,7 @@
   </div>
 </section>
 
-<section class="section-POS pb-4">
+<section class="section-Petro pb-4">
   <div class="row">
     <div class="col-md-6 product">
       <img src="Petrol_frontPic.jpg" alt=""  style="width: 60%; background-color: antiquewhite;" class="center" >
@@ -115,7 +115,7 @@
     </div>
   </div>
 </section>
-<section class="section-Campus pb-4">
+<section class="section-Auto pb-4">
   <div class="row auto">
     <div class="col-md-6 order-md-1" style="background-color: rgb(232, 232, 232);">
         <h2>Renova AutoCare</h2>
