--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                     </div>
                   </div>
                     <div class="btn-viewmore d-flex justify-content-center align-items-end" id="btn_campus">
-                      <button onclick="window.location.href = 'Product_Detail.html#section-petro'" class="flip-box-button btn  px-4" style="background-color: #FFFFFF; color: #3498db;">View More</button>
+                      <button onclick="window.location.href = 'product_Detail.html'" class="flip-box-button btn  px-4" style="background-color: #FFFFFF; color: #3498db;">View More</button>
                     </div>
                 </div>
               </div>
@@ -185,7 +185,7 @@
                     <p class="text-center" style="color: #000000;">Introducing RenovaPOS, your all-in-one restaurant management solution. With table management, seat-wise billing, KOT accessible via mobile and tablet, and multiple payment modes, RenovaPOS streamlines your operations for success. Gain insights with sales analysis, day book features, and web/mobile reports. Experience efficiency like never before.</p>
                   </div>
                     <div class="btn-viewmore d-flex justify-content-center align-items-end" id="btn_pos">
-                      <button onclick="window.location.href = 'Product_Detail.html#section-petro'" class="flip-box-button btn  px-4 py-2" style="background-color: #FFFFFF ;">View More</button>
+                      <button onclick="window.location.href = 'product_Detail.html'" class="flip-box-button btn  px-4 py-2" style="background-color: #FFFFFF ;">View More</button>
                     </div>
                   </div>
               </div>
@@ -209,7 +209,7 @@
                     <p class="text-center" style="color: #FFFFFF;">Tired of juggling multiple healthcare management systems? Our all-in-one platform simplifies everything. Manage patients, appointments, medications, labs, and even optical services with ease. Plus, digitize prescriptions, track service history, and maintain detailed records.  This empowers you to deliver focused care efficiently, leading to better patient outcomes.  Sign up for a free trial and see the difference!</p>
                   </div>
                     <div class="btn-viewmore d-flex justify-content-center align-items-end" id="btn_medi">
-                      <button onclick="window.location.href = 'Product_Detail.html#section-medi'"class="flip-box-button btn  px-4 py-2" style="background-color: #FFFFFF;color: #e74c3c;">View More</button>
+                      <button onclick="window.location.href = 'product_Detail.html'"class="flip-box-button btn  px-4 py-2" style="background-color: #FFFFFF;color: #e74c3c;">View More</button>
                     </div>
                   </div>
               </div>
@@ -237,7 +237,7 @@
                     </div>
                   </div>
                     <div class="btn-viewmore d-flex justify-content-center align-items-end" id="btn_erp">
-                      <button onclick="window.location.href = 'Product_Detail.html#section-ERP'" class="flip-box-button btn  px-4" style="background-color: #FFFFFF; color: #f39c12;">View More</button>
+                      <button onclick="window.location.href = 'product_Detail.html'" class="flip-box-button btn  px-4" style="background-color: #FFFFFF; color: #f39c12;">View More</button>
                     </div>
                 </div>
               </div>
@@ -264,7 +264,7 @@
                     </div>
                   </div>
                   <div class="btn-viewmore d-flex justify-content-center align-items-end" id="btn_petro">
-                    <button onclick="window.location.href = 'Product_Detail.html#section-Petro'" class="flip-box-button btn  px-4 py-2" style="background-color: #FFFFFF;color: #9b59b6;">View More</button>
+                    <button onclick="window.location.href = 'product_Detail.html'" class="flip-box-button btn  px-4 py-2" style="background-color: #FFFFFF;color: #9b59b6;">View More</button>
                   </div>
                 </div>
               </div>
@@ -288,7 +288,7 @@
                     <p class="text-center" style="color: #FFFFFF;">Transform automotive inventory management with our specialized software. Designed for the industry's unique demands, it offers seamless tracking, real-time sales management, and insightful analytics. Say goodbye to manual processes with our intuitive interface. From small dealerships to large enterprises, our scalable solution provides unmatched control and visibility over inventory. Experience the future of automotive inventory management.</p>
                   </div>
                     <div class="btn-viewmore d-flex justify-content-center align-items-end" id="btn_auto">
-                      <button onclick="window.location.href = 'Product_Detail.html#section-Auto'" class="flip-box-button btn  px-4 py-2" style="background-color: #FFFFFF;color: #1abc9c;">View More</button>
+                      <button onclick="window.location.href = 'product_Detail.html'" class="flip-box-button btn  px-4 py-2" style="background-color: #FFFFFF;color: #1abc9c;">View More</button>
                     </div>
                   </div>
               </div>
