--- a/product_Detail.html
+++ b/product_Detail.html
@@ -52,7 +52,7 @@
 <section class="section-ERP pb-4">
   <div class="row">
     <div class="col-md-6 product order-md-1">
-        <img src="ERP_PictureDetail.webp" alt="" class="center img-fluid">
+        <img src="ERP_PictureDetail.png" alt="" class="center img-fluid">
     </div>
     <div class="col-md-6 order-md-2" style="background-color: rgb(236, 234, 234);">
       <h2>Renova ERP</h2>
