--- a/product_Detail.html
+++ b/product_Detail.html
@@ -95,7 +95,7 @@
     <div class="col-md-6 order-md-1" style="background-color: rgb(232, 232, 232);">
         <h2>Renova MediCare</h2>
         <p>Tired of juggling multiple healthcare management systems? Our all-in-one platform simplifies everything, from managing patients, appointments, medications, labs, and even optical services with ease, to digitizing prescriptions, tracking service history, and maintaining detailed records. This empowers you to deliver focused care efficiently, leading to better patient outcomes. Experience seamless integration with billing and insurance processing, reducing administrative burdens and improving financial management. With intuitive reporting and analytics tools, gain valuable insights into your practice's performance and make informed decisions. Our user-friendly interface and customizable features adapt to your workflow, ensuring a smooth transition and maximum productivity. Join thousands of satisfied healthcare professionals who rely on our platform to streamline their operations and enhance patient care. Sign up for a free trial and see the difference!</p>
-        <button onclick="downloadFile('https://cdni.autocarindia.com/utils/imageresizer.ashx?n=https://cms.haymarketindia.net/model/uploads/modelimages/HuracanModelImage.jpg&w=350&h=251&q=91&c=1')" class="download-btn" id="btn-campus">Download</button>
+        <button onclick="downloadFile('http://renovadownload.renovaerp.in//RenovaMedicare.rar')" class="download-btn" id="btn-campus">Download</button>
     </div>
     <div class="col-md-6 order-md-2 product">
         <img src="medical_pic.jpg" alt=""  style="width: 60%;" class="center">
@@ -120,7 +120,7 @@
     <div class="col-md-6 order-md-1" style="background-color: rgb(232, 232, 232);">
         <h2>Renova AutoCare</h2>
         <p>Designed for the industry's unique demands, it offers seamless tracking of vehicles, parts, and accessories, ensuring optimal inventory management. Real-time sales management capabilities allow you to monitor transactions and customer interactions with precision, facilitating informed decision-making and maximizing profitability. Say goodbye to manual processes with our intuitive interface, which streamlines operations and enhances productivity. From small dealerships to large enterprises, our scalable solution provides unmatched control and visibility over inventory, empowering you to adapt to changing market demands and optimize resource allocation. Experience the future of automotive inventory management with our innovative software solution.</p>
-        <button onclick="downloadFile('https://cdni.autocarindia.com/utils/imageresizer.ashx?n=https://cms.haymarketindia.net/model/uploads/modelimages/HuracanModelImage.jpg&w=350&h=251&q=91&c=1')" class="download-btn" id="btn-campus">Download</button>
+        <button onclick="downloadFile('http://renovadownload.renovaerp.in//Renova.rar')" class="download-btn" id="btn-campus">Download</button>
     </div>
     <div class="col-md-6 order-md-2 product">
         <img src="autocare-removebg-preview.png" alt=""  style="width: 60%;" class="center">
