--- a/index.html
+++ b/index.html
@@ -49,7 +49,44 @@
 
     </div>
   </header>
+<dialog id="contactdialog" style="background:#fafafa;">
+  <div>
+    
+  </div>
+  <div style="display: flex; justify-content: space-between; align-items: center;">
+    <img src="Renovalogo1.png" alt="" width="140">
+    <button onclick="closeContactDialog()" class="ml-auto" style="color: red;"><i class="bi bi-x-circle"></i></button>
 
+ </div>
+  <form id="submit-form" action=""  role="form" >
+    <div class="row">
+      <div class="col-md-6 form-group">
+        <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
+      </div>
+      <div class="col-md-6 form-group mt-3 mt-md-0">
+        <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+      </div>
+    </div>
+    <div class="row mt-3">
+      <div class="col-md-6 form-group">
+        <input type="tel" name="mobileNo" class="form-control" id="mobileNo" placeholder="Your Mobile No" >
+      </div>
+      <div class="col-md-6 form-group mt-3 mt-md-0">
+        <input type="text" class="form-control" name="company" id="company" placeholder="Your Company" >
+      </div>
+    </div>
+    <div class="form-group mt-3">
+      <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" >
+    </div>
+    <div class="form-group mt-3">
+      <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
+    </div>
+    <div class="my-3">
+      <div class="text-center pt-4 "><button class="button-62" type="submit">Send Message</button></div>
+
+    </div>
+  </form>
+</dialog>
 
 
 
@@ -61,7 +98,7 @@
         <div class="a">
           <h3>Streamline Your Finances with Renova Innovations- The Ultimate Accounting Solution for Businesses.</h3>
           <p>Welcome to Renova Software, where we simplify accounting for businesses of all sizes. Our cloud-based accounting software is designed to make managing your finances effortless, accurate, and secure</p>
-          <div><a href="#about" class="btn-get-started scrollto">Get Started</a></div>
+          <div><button onclick="openContactDialog()" class="btn-get-started bg-primary">Get Started</button></div>
         </div>
         <div class="col-xl-4 col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="150">
           
@@ -199,7 +236,7 @@
                     <p style="color: #FFFFFF;">Transforming healthcare administration for a seamless patient experience.</p>
                   </div>
                   <div>
-                     <img src="healthcare_erp.webp" alt="" class="img-fluid custom-img-size ">
+                     <img src="healthcare_erp.png" alt="" class="img-fluid custom-img-size ">
                   </div>
                 </div>
                 </div>
@@ -912,9 +949,13 @@
 
     </div>
   </footer><!-- End Footer -->
-
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-  <div id="preloader"></div>
+  <div class="row">
+    <a href="https://wa.me/+919020555620" class="wtp d-flex align-items-center justify-content-center"><i class="bi bi-whatsapp"></i></a>
+  </div>
+  <div class="row">
+    <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  </div>
+ <div id="preloader"></div>
 
 
   <!-- Vendor JS Files -->
@@ -950,6 +991,14 @@
             }
         })
     })
+    function openContactDialog() {
+            const contactDialog = document.getElementById('contactdialog');
+            contactDialog.showModal();
+        }
+        function closeContactDialog() {
+            const contactDialog = document.getElementById('contactdialog');
+            contactDialog.close();
+        }
 </script>
 </body>
 
